# brotli_g_sdk

./: .gitignore  meson.build  meson_options.txt
inc/: BrotliG.h  BrotligDecoder.h  BrotligEncoder.h  DataStream.h
inc/common/: BrotligBitWriter.h  BrotligCommand.h  BrotligCommon.h  BrotligConstants.h  BrotligDataConditioner.h  BrotligDeswizzler.h  BrotligUtils.h
inc/decoder/: BrotligHuffmanTable.h  PageDecoder.h
inc/encoder/: BrotligHuffman.h  BrotligSwizzler.h  PageEncoder.h
sample/: BrotligGPUDecoder.cpp  BrotligGPUDecoder.h  brotlig_cli.cpp
src/: BrotligDecoder.cpp  BrotligEncoder.cpp  DataStream.cpp
src/common/: BrotligBitWriter.cpp  BrotligCommand.cpp  BrotligDataConditioner.cpp  BrotligUtils.cpp
src/decoder/: BrotliGCompute.hlsl  BrotligBitReader.h  BrotligCommandLut.inl  BrotligHuffmanTable.cpp  PageDecoder.cpp
src/encoder/: BrotligHuffman.cpp  BrotligSwizzler.cpp  BrotligSwizzler.h  PageEncoder.cpp
subprojects/packagefiles/brotli-1.1.0/: meson.build
